# dhyana

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/dhyana/: __init__.py  cli.py  models.py  report.py
src/dhyana/meditation/: __init__.py  guided.py  techniques.py  timer.py
src/dhyana/tracker/: __init__.py  progress.py  sessions.py  stats.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_meditation.py  test_models.py  test_tracker.py
